--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "youtube-ai-navigator-server",
   "version": "1.0.0",
+  "description": "Server for YouTube AI Navigator Chrome Extension",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1"
   }
 }
